# woz-harness-coding-workspace

./: Dockerfile  README.md  config.yaml  poem.md  pyproject.toml
.github/workflows/: publish-template-version.yml
skills/using-slack-tools/scripts/: slack_tools.py
src/: agent.py  github_ops.py  helpers.py
